multi_index_map_derive2/tests/ui/multiple_field_attributes.stderr
error: use one #[multi_index(Accessor, ...)] attribute per field
 --> tests/ui/multiple_field_attributes.rs:6:5
  |
6 |     #[multi_index(ByTimestamp)]
  |     ^
